# arrow-datafusion

./: .gitmodules
ballista-examples/: Cargo.toml
ballista/rust/client/: Cargo.toml
ballista/rust/core/: Cargo.toml
ballista/rust/core/proto/: ballista.proto
ballista/rust/core/src/serde/: mod.rs
ballista/rust/core/src/serde/logical_plan/: from_proto.rs  to_proto.rs
ballista/rust/core/src/serde/physical_plan/: from_proto.rs  to_proto.rs
ballista/rust/executor/: Cargo.toml
ballista/rust/scheduler/: Cargo.toml
ballista/rust/scheduler/src/: lib.rs
ballista/rust/scheduler/src/state/: mod.rs
benchmarks/: Cargo.toml
datafusion/: Cargo.toml
datafusion-cli/: Cargo.toml
datafusion/src/: lib.rs
datafusion/src/datasource/file_format/: mod.rs  rocksdb.rs
datafusion/src/execution/: context.rs  mod.rs  plugin_manager.rs  udaf_plugin_manager.rs  udf_plugin_manager.rs
datafusion/src/physical_plan/: mod.rs  udaf.rs  udf.rs
datafusion/src/physical_plan/file_format/: mod.rs  rocksdb.rs
datafusion/src/plugin/: mod.rs  plugin_manager.rs  udf.rs
